fixed the malalignment issues

--- a/src/about-us-src/src/components/clients.scss
+++ b/src/about-us-src/src/components/clients.scss
@@ -23,17 +23,17 @@
 }
 
 .client-pic {
-  width: 10.9375vw;
-  border: 1px solid #4A4E57;
-  height: 10.9375vw;
+  width: 11vw;
+  outline: 1px solid #4A4E57;
+  height: 11vw;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 #clients-row1, #clients-row2, #clients-row3 {
-  width: 54.6875vw;
   display: flex;
+  width: 55vw;
   justify-content: center;
   align-items: center;
 }
@@ -42,14 +42,34 @@
   justify-content: end;
 }
 
+#filimo-div {
+  border-right: none;
+}
+
+#aparat-div, #naft-div, #mokhaberat-div, #varzesh3-div{
+  border-bottom: none;
+  border-right: none;
+}
+
+#tamasha-div, #farabi-div, #parsian-div {
+  border-right: none;
+}
+
+#jahad-div {
+  border-bottom: none;
+}
+
+#astan-div {
+}
+
 @import "icons.scss";
 
 @media screen and (max-width: 600px){
   #clients {
-    width: 90vw;
-    margin-left: 12.5vw;
+    margin-left: 15.3vw;
     flex-direction: column;
     margin-top: 5vh;
+    justify-content: center;
     align-items: center;
   }
 
@@ -69,6 +89,7 @@
   #clients-pics {
     justify-content: center;
     align-items: start;
+    width: 55vw;
     flex-direction: row;
   }
 
@@ -82,7 +103,7 @@
   #clients-row2 {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     flex-direction: column;
   }
 
